--- a/BloomEngine/BloomEngine.csproj
+++ b/BloomEngine/BloomEngine.csproj
@@ -7,42 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="0Harmony">
-      <HintPath>Libs\0Harmony.dll</HintPath>
-	  <Private>False</Private>
-    </Reference>
-    <Reference Include="Assembly-CSharp">
-      <HintPath>Libs\Assembly-CSharp.dll</HintPath>
-	  <Private>False</Private>
-    </Reference>
-    <Reference Include="BepInEx.Core">
-      <HintPath>Libs\BepInEx.Core.dll</HintPath>
-	  <Private>False</Private>
-    </Reference>
-    <Reference Include="BepInEx.Unity.IL2CPP">
-      <HintPath>Libs\BepInEx.Unity.IL2CPP.dll</HintPath>
-	  <Private>False</Private>
-    </Reference>
-    <Reference Include="Il2CppInterop.Runtime">
-      <HintPath>Libs\Il2CppInterop.Runtime.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Il2Cppmscorlib">
-      <HintPath>Libs\Il2Cppmscorlib.dll</HintPath>
-	  <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine">
-      <HintPath>Libs\UnityEngine.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.AssetBundleModule">
-      <HintPath>Libs\UnityEngine.AssetBundleModule.dll</HintPath>
-	  <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.CoreModule">
-      <HintPath>Libs\UnityEngine.CoreModule.dll</HintPath>
-	  <Private>False</Private>
-    </Reference>
+	<PackageReference Include="HarmonyX" Version="2.15.0" />
+	<PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.738" />
+	<PackageReference Include="PvZ.Replanted.GameLibs" Version="1.2.1.2" />
   </ItemGroup>
 
 </Project>
