--- a/BloomEngine/BloomEngine.csproj
+++ b/BloomEngine/BloomEngine.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+	<LangVersion>latest</LangVersion>
 	<PlatformTarget>x64</PlatformTarget>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
   </PropertyGroup>
 	
   <ItemGroup>
