--- a/BloomEngine/BloomEngine.csproj
+++ b/BloomEngine/BloomEngine.csproj
@@ -5,7 +5,10 @@
 	<LangVersion>latest</LangVersion>
 	<PlatformTarget>x64</PlatformTarget>
     <ImplicitUsings>enable</ImplicitUsings>
+	<Version>0.1.0-alpha</Version>
+	<Authors>PalmForest</Authors>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+	<NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
